logs/invenio-theme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Babel-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Assets-0.12.egg-info'...
Listing './lib/python3.5/site-packages/Flask_BabelEx-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Breadcrumbs-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Collect-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Menu-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/babel'...
Listing './lib/python3.5/site-packages/babel/locale-data'...
Listing './lib/python3.5/site-packages/babel/localtime'...
Listing './lib/python3.5/site-packages/babel/messages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_babelex'...
Listing './lib/python3.5/site-packages/flask_breadcrumbs'...
Listing './lib/python3.5/site-packages/flask_collect'...
Listing './lib/python3.5/site-packages/flask_collect/storage'...
Listing './lib/python3.5/site-packages/flask_menu'...
Listing './lib/python3.5/site-packages/invenio_assets'...
Listing './lib/python3.5/site-packages/invenio_assets-1.0.0b7.dist-info'...
Listing './lib/python3.5/site-packages/invenio_i18n'...
Listing './lib/python3.5/site-packages/invenio_i18n/static'...
Listing './lib/python3.5/site-packages/invenio_i18n/static/js'...
Listing './lib/python3.5/site-packages/invenio_i18n/static/js/invenio_i18n'...
Listing './lib/python3.5/site-packages/invenio_i18n/templates'...
Listing './lib/python3.5/site-packages/invenio_i18n/templates/invenio_i18n'...
Listing './lib/python3.5/site-packages/invenio_i18n/templates/invenio_i18n/macros'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/cs'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/da'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/de'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/en'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/es'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/fr'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/it'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/sk'...
Listing './lib/python3.5/site-packages/invenio_i18n/translations/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_i18n-1.0.0b4.dist-info'...
Listing './lib/python3.5/site-packages/invenio_theme'...
Listing './lib/python3.5/site-packages/invenio_theme/static'...
Listing './lib/python3.5/site-packages/invenio_theme/static/images'...
Listing './lib/python3.5/site-packages/invenio_theme/static/js'...
Listing './lib/python3.5/site-packages/invenio_theme/static/js/invenio_theme'...
Listing './lib/python3.5/site-packages/invenio_theme/static/scss'...
Listing './lib/python3.5/site-packages/invenio_theme/static/scss/invenio_theme'...
Listing './lib/python3.5/site-packages/invenio_theme/templates'...
Listing './lib/python3.5/site-packages/invenio_theme/templates/invenio_theme'...
Listing './lib/python3.5/site-packages/invenio_theme/templates/invenio_theme/macros'...
Listing './lib/python3.5/site-packages/invenio_theme/translations'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/cs'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/da'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/de'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/es'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/fr'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/it'...
Listing './lib/python3.5/site-packages/invenio_theme/translations/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/invenio_theme-1.0.0b4.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/node_semver-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/semver'...
Listing './lib/python3.5/site-packages/semver/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/speaklater-1.3.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
